k3s/infrastructure/controllers/argocd/dashboard.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.vextech.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: no-auth
          namespace: route
  tls: {}
